<resources>
    <string name="app_name">Статистика</string>
    <string name="msg_enter_name">Введите имя</string>
    <string name="lbl_delete">Удалить</string>
    <string name="lbl_name_object">Название объекта</string>
    <string name="lbl_save">Сохранить</string>
    <string name="lbl_next">Далее</string>
    <string name="msg_delete_success">Успешно удалено</string>
    <string name="msg_enter_correct_name">Введите корректное название объекта</string>
    <string name="msg_save_success">Успешно сохранено</string>
    <string name="lbl_state_object">Состояние объекта</string>
    <string name="title_add_object">Добавьте объекты</string>
    <string name="title_add_state">Добавьте состояния</string>
    <string name="lbl_choose_object">Выбрать объект</string>
    <string name="lbl_choose_state">Выбрать состояние</string>
    <string name="lbl_subscribe_state">Описать состояние</string>
    <string name="lbl_save_observation">Сохранить наблюдение</string>
    <string name="lbl_finish_observation">Закончить наблюдение</string>
    <string name="lbl_observation">Наблюдение</string>
    <string name="lbl_name_observation">Название наблюдения</string>
    <string name="title_finish">Завершить</string>
    <string name="msg_error">Что-то пошло не так :-(</string>
    <string name="lbl_choose_observation">Выберите наблюдение</string>
    <string name="lbl_list">Список</string>
    <string name="lbl_linear_diagram">Линейная диаграма</string>
    <string name="lbl_circle_diagram">Круговая диаграма</string>
    <string name="lbl_csv">CSV формат</string>
    <string name="msg_choose_observation">Выберите наблюдение</string>
    <string name="title_linear_diagram">Линейная диаграма</string>
    <string name="title_circle_diagram">Круговая диаграма</string>
</resources>
